BREAKING CHANGE: change structure of ErrorResponse
